rgwlc: fix segfault resharding during lc

Fixes: https://tracker.ceph.com/issues/54363

Signed-off-by: Mark Kogan <mkogan@redhat.com>