src/rgw/rgw_lc.cc
@@ -477,7 +477,7 @@ public:
         if (ret < 0) {
           ldpp_dout(dpp, 0) << "ERROR: list_op returned ret=" << ret
 				 << dendl;
-          return ret;
+          return false;
         }
       }
       delay();
